--- a/pages/configuração.html
+++ b/pages/configuração.html
@@ -18,15 +18,15 @@
   </header>
 
   <main class="container">
-    <a href="../pages/" class="btn"><img src="/images/icone-configuração.svg" alt=""></i> Conta</button>
-    <a href="../pages/notificacao.html" class="btn"><img src="/images/icone-sino.svg" alt=""></i> Notificações</button>
-    <a href="../pages/pagina-sobre-o-aplic.html" class="btn"><img src="/images/icone-info.svg" alt=""></i> Sobre</button></a>
+    <a href="/" class="btn"><img src="/images/icone-configuração.svg" alt=""></i> Conta</button>
+    <a href="/notificacao" class="btn"><img src="/images/icone-sino.svg" alt=""></i> Notificações</button>
+    <a href="/pagina-sobre-o-aplic" class="btn"><img src="/images/icone-info.svg" alt=""></i> Sobre</button></a>
   </main>
 
  <nav>
-  <a href="../pages/inicial.html" class="aaa"><img src="/images/casa-regular.svg" class="img_casa">Início</div>
-  <a href="../pages/historico-de-humor.html"  class="aaa"><img src="/images/relogio-regular.svg" class="img_relogio">Histórico de Humor</div>
-  <a href="../pages/perfil.html" class="aaa"><img src="/images/usuario-completo.svg" class="img_perfil">Perfil</div>
+  <a href="/inicial" class="aaa"><img src="/images/casa-regular.svg" class="img_casa">Início</div>
+  <a href="/historico-de-humor"  class="aaa"><img src="/images/relogio-regular.svg" class="img_relogio">Histórico de Humor</div>
+  <a href="/perfil" class="aaa"><img src="/images/usuario-completo.svg" class="img_perfil">Perfil</div>
 </nav>
 
 </body>
