--- a/pages/inicialtriste.html
+++ b/pages/inicialtriste.html
@@ -41,19 +41,19 @@
 
     <div class="humor-footer">
       <div class="menu-item ativo">
-        <a href="../pages/inicialtriste.html" class="b">
+        <a href="/inicialtriste" class="b">
         <img src="/images/casa-completa.svg">
         <p>Início</p>
         </a>
       </div>
       <div class="menu-item">
-                <a href="../pages/historico-de-humor.html" class="b">
+                <a href="/historico-de-humor" class="b">
         <img src="/images/relogio-regular.svg">
         <p>Histórico de Humor</p>
         </a>
       </div>
       <div class="menu-item">
-        <a href="../pages/perfil.html" class="b">
+        <a href="/perfil" class="b">
         <img src="/images/usuario-regular.svg">
         <p>Perfil</p>
         </a>
