--- a/pages/pagina-sobre-o-aplic.html
+++ b/pages/pagina-sobre-o-aplic.html
@@ -29,15 +29,15 @@
         </section>
         
         <div class="app-footer">
-            <a href="../pages/inicial.html" class="menu-item-padrao">
+            <a href="/inicial" class="menu-item-padrao">
                 <img src="/images/casa-regular.svg" alt="Início">
                 <p>Início</p>
             </a>
-            <a href="../pages/historico-de-humor.html" class="menu-item-padrao">
+            <a href="/historico-de-humor" class="menu-item-padrao">
                 <img src="/images/relogio-regular.svg" alt="Histórico de Humor">
                 <p>Histórico de Humor</p>
             </a>
-            <a href="../pages/perfil.html" class="menu-item-padrao ativo">
+            <a href="/perfil" class="menu-item-padrao ativo">
                 <img src="/images/usuario-completo.svg" alt="Perfil">
                 <p>Perfil</p>
             </a>
