--- a/pages/tela-perfil.html
+++ b/pages/tela-perfil.html
@@ -19,19 +19,19 @@
         <div>
             <img src="/images/lapis.svg" alt="">
         </div>
-          <a href="../pages/mudarnome.html">Editar nome</span>
+          <a href="/mudarnome">Editar nome</span>
         </div>
         <div class="option">
           <div>
             <img src="/images/chave.svg" alt="">
           </div>
-          <a href="../pages/alterarsenha.html">Editar senha</span>
+          <a href="/alterarsenha">Editar senha</span>
         </div>
         <div class="option">
           <div>
             <img src="/images/lixo.svg" alt="">
           </div>
-          <a href="deletar.html">Excluir conta</span>
+          <a href="deletar">Excluir conta</span>
         </div>
       </div>
     </div>
