--- a/pages/config.html
+++ b/pages/config.html
@@ -14,32 +14,32 @@
         </header>
 
         <main>
-            <a href="../pages/tela-perfil.html" class="botao">
+            <a href="/tela-perfil" class="botao">
                 <img src="/images/usuario-completo.svg" alt="Conta">
                 Conta
             </a>
 
-            <a href="../pages/notificacao.html" class="botao">
+            <a href="/notificacao" class="botao">
                 <img src="/images/notificacao.svg" alt="Notificações">
                 Notificações
             </a>
 
-            <a href="../pages/pagina-sobre-o-aplic.html" class="botao">
+            <a href="/pagina-sobre-o-aplic" class="botao">
                 <img src="/images/icone-info.svg" alt="Sobre">
                 Sobre
             </a>
         </main>
 
         <div class="app-footer">
-            <a href="../pages/inicial.html" class="menu-item-padrao">
+            <a href="/inicial" class="menu-item-padrao">
                 <img src="/images/casa-regular.svg" alt="Início">
                 <p>Início</p>
             </a>
-            <a href="../pages/historico-de-humor.html" class="menu-item-padrao">
+            <a href="/historico-de-humor" class="menu-item-padrao">
                 <img src="/images/relogio-regular.svg" alt="Histórico de Humor">
                 <p>Histórico de Humor</p>
             </a>
-            <a href="../pages/perfil.html" class="menu-item-padrao ativo">
+            <a href="/perfil" class="menu-item-padrao ativo">
                 <img src="/images/usuario-completo.svg" alt="Perfil">
                 <p>Perfil</p>
             </a>
