--- a/pages/historico-de-humor.html
+++ b/pages/historico-de-humor.html
@@ -60,15 +60,15 @@
         </div>
 
         <div class="app-footer">
-            <a href="../pages/inicial.html" class="menu-item-padrao">
+            <a href="/inicial" class="menu-item-padrao">
                 <img src="/images/casa-regular.svg" alt="Início">
                 <p>Início</p>
             </a>
-            <a href="../pages/historico-de-humor.html" class="menu-item-padrao ativo">
+            <a href="/historico-de-humor" class="menu-item-padrao ativo">
                 <img src="/images/relogio-completo.svg" alt="Histórico de Humor">
                 <p>Histórico de Humor</p>
             </a>
-            <a href="../pages/perfil.html" class="menu-item-padrao">
+            <a href="/perfil" class="menu-item-padrao">
                 <img src="/images/usuario-regular.svg" alt="Perfil">
                 <p>Perfil</p>
             </a>
