--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -20,29 +20,29 @@
 
             <button class="botao configuracoes">
                 <img src="/images/config.svg" alt="Configurações">
-                <a href="../pages/config.html" class="a">
+                <a href="/config" class="a">
                     <h2>Configurações</h2>
                 </a>
             </button>
 
             <button class="botao sair">
                 <img src="/images/sair.svg" alt="Sair">
-                <a href="../pages/login.html" class="a">
+                <a href="/login" class="a">
                     <h2>Sair</h2>
                 </a>
             </button>
         </main>
 
         <div class="app-footer">
-            <a href="../pages/inicial.html" class="menu-item-padrao">
+            <a href="/inicial" class="menu-item-padrao">
                 <img src="/images/casa-regular.svg" alt="Início">
                 <p>Início</p>
             </a>
-            <a href="../pages/historico-de-humor.html" class="menu-item-padrao">
+            <a href="/historico-de-humor" class="menu-item-padrao">
                 <img src="/images/relogio-regular.svg" alt="Histórico de Humor">
                 <p>Histórico de Humor</p>
             </a>
-            <a href="../pages/perfil.html" class="menu-item-padrao ativo">
+            <a href="/perfil" class="menu-item-padrao ativo">
                 <img src="/images/usuario-completo.svg" alt="Perfil">
                 <p>Perfil</p>
             </a>
